--- a/greensource_pages/templates/greensource_pages/about.html
+++ b/greensource_pages/templates/greensource_pages/about.html
@@ -47,14 +47,10 @@
             </p>
             <h5>Why People Choose Us</h5>
             <ul>
-                <li>
-                    <i class="fas fa-check"></i>There are complexities that not many solar installers know about</li>
-                <li>
-                    <i class="fas fa-check"></i>Our Installations are without shortcuts and completely detailed</li>
-                <li>
-                    <i class="fas fa-check"></i>Feeling overwhelmed with different choice of products, We will guide you</li>
-                <li>
-                    <i class="fas fa-check"></i>Want to deal with with one person from start to finish? We are the right plug</li>
+                <i class="fas fa-check"></i><li>There are complexities that not many solar installers know about</li>
+                <i class="fas fa-check"></i><li>Our Installations are without shortcuts and completely detailed</li>
+                <i class="fas fa-check"></i><li>Feeling overwhelmed with different choice of products, We will guide you</li>
+                <i class="fas fa-check"></i><li>Want to deal with with one person from start to finish? We are the right plug</li>
             </ul>
         </div>
     </div>
@@ -66,48 +62,36 @@
             <hr />
             <p>Building structure for sustainability</p>
         </div>
-    </div>
-    <div class="container padding">
-        <div class="card-cover row padding">
-                <div class="card">
-                    <div class="face face1">
-                        <div clas="content">
-                            <p>Our mission is to promote renewable energy technologies,
-                            energy efficiency and sustainable energy that benefits everyone.</p>
-                        </div>
-                    </div>
-                    <div class="face face2">
-                        <h2>mission</h2>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="face face1">
-                        <div clas="content">
-                            <ul class="create">
-                                <li>Customer Centric</li>
-                                <li>Reliability</li>
-                                <li>Integrity</li>
-                                <li>Accountability</li>
-                                <li>Teamwork</li>
-                                <li>Education</li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="face face2">
-                        <h2>values</h2>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="face face1">
-                        <div clas="content">
-                            <p>Our vision is to build a sustainable energy future, providing solutions to manage energy and environmental
-                                sustainability</p>
-                        </div>
-                    </div>
-                    <div class="face face2">
-                        <h2>vision</h2>
-                    </div>
-                </div>
+        </div>
+        <div class="container padding">
+        <div class="mission owl-carousel owl-theme" id="vision">
+            <div class="item">
+            <div class="vision">
+                <h4>Mission</h4>
+                <p>Our mission is to promote renewable energy technologies,
+                energy efficiency and sustainable energy that benefits everyone.</p>
+            </div>
+            </div>
+            <div class="item">
+            <div class="vision">
+                <h4>Core Values</h4>
+                <ul class="create">
+                    <li>Customer Centric</li>
+                    <li>Reliability</li>
+                    <li>Integrity</li>
+                    <li>Accountability</li>
+                    <li>Teamwork</li>
+                    <li>Education</li> 
+                </ul>
+            </div>
+            </div>
+            <div class="item">
+            <div class="vision">
+                <h4>Vision</h4>
+                <p>Our vision is to build a sustainable energy future, providing solutions to manage energy and environmental
+                    sustainability</p>
+            </div>
+            </div>
         </div>
     </div>
 </section>
