--- a/greensource_pages/templates/greensource_pages/energy-management.html
+++ b/greensource_pages/templates/greensource_pages/energy-management.html
@@ -6,7 +6,7 @@
 <div class="container-fluid padding">
     <div class="header row padding">
         <div class="col-12 animated fadeIn">
-            <p>Solar Storage Solution</p>
+            <p>Energy Storage Solution</p>
         </div>
     </div>
 </div>
@@ -18,29 +18,23 @@
         <li class="breadcrumb-item">
             <a href="{% url 'services' %}">Services</a>
         </li>
-        <li class="breadcrumb-item active">Storage Solution</li>
+        <li class="breadcrumb-item active">Energy Storage</li>
     </ol>
 </nav>
-<div class="container-fluid padding">
+<div class="container padding">
     <div class="service-list row padding">
         <div class="col">
-            <img src="{% static 'images/battery.webp' %}" />
+            <img src="{% static 'images/energy-storage.jpg' %}" />
             <p>
-                We build energy storage for solar energy systems, which is important for ensuring a consistent power supply during peak load
-                times. Energy storage, we believe, is a critical component and major backbone of renewable energy systems,
-                especially in our area, where electricity supply is insecure and unreliable. We have a lot of experience
-                handling renewable energy systems and energy storage. For both residential and industrial projects, we provide
-                expert advice on storage systems. The best resources are put to work to find the best solution for our customers'
-                specific needs and budgets. This ensures they run on solar energy system and not depend on it whenever it
-                is needed and no direct sunlight will reach your system. Our expertise in energy storage solutions ensures
-                you get trusted and reliable storage solution for your solar energy system. Your battery would work for the
-                amount of hours / days it was built for with our storage solutions, giving you the full value and advantage
-                of your device. Solar energy storage has a large market and will continue to grow in popularity, particularly
-                for electricity demand, so our team is dedicated to delivering a reliable, safe product to our customers.
-                Our aim is to ensure that our customers' financial needs are met while also ensuring that their long-term
-                energy goals are met.
+                 Load demand which can make up as much as 70 percent of your electricity bill, can be significantly reduced with the help
+                of solar energy storage. We design two types of Energy storage;<br/>
+                <span>1. Complete Load Backup:-</span> We develop a system that can support any power consumptionyou require even if the grid goes down by accounting for all your solar energy usuage. This implies that until you peep through your window at your dark neighbourhood, yu won't even be aware that power is out.<br/>
+                <span>2. Critical Load Backup:-</span> With a Critical load battery system, you may choos which necessities you want to continue using in the event of a power outage. that implies that you can keep your lights on during a power outage while saving some money.<br/>
+                Grensource Energy provides cutting-edge energy storage systems that are easy to maintain, environmental
+                friendly and relatively cost effective. Our goal is to assist you in making wise investment in energy storage, wheather it
+                is for Residential or Commercial purpose, hence will increase the value of your facility and take you towards energy independence.
             </p>
-            <h4>Our energy storage solutions includes:</h4>
+            <h4>Our Energy Storage Solutions includes:</h4>
             <ul>
                 <li>Storage Analysis</li>
                 <li>Battery Replacement</li>
