--- a/greensource_pages/templates/greensource_pages/hvac.html
+++ b/greensource_pages/templates/greensource_pages/hvac.html
@@ -21,7 +21,7 @@
         <li class="breadcrumb-item active">Electrical Installation</li>
     </ol>
 </nav>
-<div class="container-fluid padding">
+<div class="container padding">
     <div class="service-list row padding">
         <div class="col">
             <img src="{% static 'images/ceiling-lamp.webp' %}" alt="inverter" />
