--- a/greensource_pages/templates/greensource_pages/project-details.html
+++ b/greensource_pages/templates/greensource_pages/project-details.html
@@ -6,7 +6,7 @@
 <div class="container-fluid padding">
     <div class="header row padding">
         <div class="col-12 animated fadeIn">
-            <p>Project Details</p>
+            <p>Portfolio Details</p>
         </div>
     </div>
 </div>
@@ -16,9 +16,9 @@
             <a href="{% url 'index' %}">Home</a>
         </li>
         <li class="breadcrumb-item">
-            <a href="{% url 'projects' %}">Projects</a>
+            <a href="{% url 'projects' %}">Portfolio</a>
         </li>
-        <li class="breadcrumb-item active">Project-Details</li>
+        <li class="breadcrumb-item active">Portfolio-Details</li>
     </ol>
 </nav>
 <div class=" container-fluid padding page-header">
