--- a/greensource_pages/templates/greensource_pages/projects.html
+++ b/greensource_pages/templates/greensource_pages/projects.html
@@ -6,7 +6,7 @@
 <div class="container-fluid padding">
     <div class="header row padding">
         <div class="col-12 animated fadeIn">
-            <p>Recent Projects</p>
+            <p>Our Portfolio</p>
         </div>
     </div>
 </div>
@@ -15,7 +15,7 @@
         <li class="breadcrumb-item">
             <a href="{% url 'index' %}">Home</a>
         </li>
-        <li class="breadcrumb-item active">Projects</li>
+        <li class="breadcrumb-item active">Portfolio</li>
     </ol>
 </nav>
 <div class=" container-fluid padding page-header">
