--- a/greensource_pages/templates/greensource_pages/services.html
+++ b/greensource_pages/templates/greensource_pages/services.html
@@ -30,35 +30,11 @@
                     <div class="single-service-style-three">
                         <div class="text-block">
                             <div class="block">
-                                <i class="fas fa-home"></i>
+                                <i class="fas fa-solar-panel"></i>
                             </div>
-                            <h3><a href="{% url 'solar_design' %}">Residential Solar</a></h3>
-                            <p>Solar panels for home solar energy systems are designed, installed, and maintained by...</p>
+                            <h3><a href="{% url 'solar_design' %}">Design/Installation</a></h3>
+                            <p>We leverage on our expertise and experience to deliver cost-effective long...</p>
                             <a href="{% url 'solar_design' %}" class="read-more">Read More</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-                    <div class="single-service-style-three">
-                        <div class="text-block">
-                            <div class="block">
-                                <i class="fas fa-industry"></i>
-                            </div>
-                            <h3><a href="{% url 'commercial_solar' %}">Commercial Solar</a></h3>
-                            <p>We design, install, and operate solar panels for commercial applications ranging from ...</p>
-                            <a href="{% url 'commercial_solar' %}" class="read-more">Read More</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-                    <div class="single-service-style-three">
-                        <div class="text-block">
-                            <div class="block">
-                                    <i class="fas fa-hdd"></i>
-                            </div>
-                            <h3><a href="{% url 'off_grid_solar' %}">Inverter Installation</a></h3>
-                            <p>We render inverter installation services for clients who like this option in a unique way ...</p>
-                            <a href="{% url 'off_grid_solar' %}" class="read-more">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -68,7 +44,7 @@
                             <div class="block">
                                     <i class="far fa-lightbulb"></i>
                             </div>
-                            <h3><a href="{% url 'electrical_design' %}">Solar Lighting</a></h3>
+                            <h3><a href="{% url 'electrical_design' %}">Street Lighting</a></h3>
                             <p>We design and install solar lights for houses, offices, neighborhoods, and market ...</p>
                             <a href="{% url 'electrical_design' %}" class="read-more">Read More</a>
                         </div>
@@ -78,21 +54,9 @@
                     <div class="single-service-style-three">
                         <div class="text-block">
                             <div class="block">
-                                    <i class="fas fa-solar-panel"></i>
-                            </div>
-                            <h3><a href="{% url 'solar_water_pump' %}">Solar Pump</a></h3>
-                            <p>Since it lowers the cost of burning fossil fuels and provides energy efficiency ...</p>
-                            <a href="{% url 'solar_water_pump' %}" class="read-more">Read More</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-                    <div class="single-service-style-three">
-                        <div class="text-block">
-                            <div class="block">
                                     <i class="fas fa-car-battery"></i>
                             </div>
-                            <h3><a href="{% url 'energy_management' %}">Solar Storage</a></h3>
+                            <h3><a href="{% url 'energy_management' %}">Energy Storage</a></h3>
                             <p>We build energy storage for solar energy systems, which is important for ensuring ...</p>
                             <a href="{% url 'energy_management' %}" class="read-more">Read More</a>
                         </div>
@@ -102,9 +66,9 @@
                         <div class="single-service-style-three">
                             <div class="text-block">
                                 <div class="block">
-                                        <i class="fas fa-charging-station"></i>
+                                        <i class="fas fa-list-check"></i>
                                 </div>
-                                <h3><a href="{% url 'project_management' %}">Energy Management</a></h3>
+                                <h3><a href="{% url 'project_management' %}">Project Development</a></h3>
                                 <p>Your home/business energy usage and GHG emissions can be minimized with the ...</p>
                                 <a href="{% url 'project_management' %}" class="read-more">Read More</a>
                             </div>
@@ -128,8 +92,8 @@
                                 <div class="block">
                                         <i class="fas fa-tools"></i>
                                 </div>
-                                <h3><a href="{% url 'maintenance_service' %}">Maintenance Retrofit</a></h3>
-                                <p>We're committed to increasing the production of renewable energy and ensuring ...</p>
+                                <h3><a href="{% url 'maintenance_service' %}">System Maintenance</a></h3>
+                                <p>Solar Energy Systems should and must be maintained even though they are fairly passive...</p>
                                 <a href="{% url 'maintenance_service' %}" class="read-more">Read More</a>
                             </div>
                         </div>
