--- a/greensource_pages/templates/greensource_pages/solar-design.html
+++ b/greensource_pages/templates/greensource_pages/solar-design.html
@@ -1,7 +1,7 @@
 {% extends 'base_layout.html' %}
 {% block nav-service %} active {% endblock %}
 {% load static %} 
-{% block title %}Residential Solar Panels Installation {{ block.super }}{% endblock %} 
+{% block title %}Solar Design & Installation {{ block.super }}{% endblock %} 
 {% block content %}
 <div class="container-fluid padding">
     <div class="header row padding">
@@ -18,31 +18,28 @@
         <li class="breadcrumb-item">
             <a href="{% url 'services' %}">Services</a>
         </li>
-        <li class="breadcrumb-item active">Residential-solar</li>
+        <li class="breadcrumb-item active">Design & Installation</li>
     </ol>
 </nav>
-<div class="container-fluid padding">
+<div class="container padding">
     <div class="service-list row padding">
         <div class="col">
-            <img src="{% static 'images/residential-solar.webp' %}" alt="rooftop mounted solar panels" />
+            <img src="{% static 'images/residential-solar.jpg' %}" alt="rooftop mounted solar panels" />
             <p>
-                Solar panels for home solar energy systems are designed, installed, and maintained by us. We believe that a home should be
-                a calming environment, so we assist you in deciding the best system for your needs, ensuring that your property
-                is powered efficiently at all times. At Greensource Energy, we are committed to assisting homeowners in choosing
-                a solar system that is both economical and environmentally friendly. Our team will oversee each component's
-                design process, allowing customers to determine exactly what capability will meet their needs from generation
-                to consumption. We've given designs to homes with an average capacity of 2kW when mounted on their roofs
-                over time. From start to finish, our business is concentrated on delivering dependable service at reasonable
-                prices. We are dedicated to delivering the best customer experience in terms of product performance as well
-                as pricing choices, ensuring that you can fully tailor your system to meet or exceed all of your objectives.
+                 We assist in deciding the best Solar Power System for your energy needs. With over 100kwp installation of decentralized
+                rooftop solar panel installations, we leverage on our expertise and experience to deliver cost-effective long-term solar solution for
+                Homes, Businesses, Agencies, Institutions and Agricutural firms. Our designs are taiored to meet your financial needs, site
+                requirements, homes and business need regardless of your financial background and capacity. we are focused on quality, safety,
+                effectiveness and efficiency of of our solar installation. from Engineering and Procurement to Installation and Project Management.
+                Our goal is to hand over quality solar system that delivers performance optimization and maximum Return on Investment while
+                adhering to standard engineering and installation procedures.
             </p>
-            <h4>Our residential solar energy system services includes:</h4>
+            <h4>Our Design & Installation Services includes:</h4>
             <ul>
-                <li>Design</li>
-                <li>Installation</li>
-                <li>Operations</li>
-                <li>Grid Tied System</li>
-                <li>Technical support</li>
+                <li>Site Visits</li>
+                <li>Off-grid Solar</li>
+                <li>Grid Connected Solar</li>
+                <li>Inverter Installation</li>
             </ul>
         </div>
     </div>
