--- a/static/home.css
+++ b/static/home.css
@@ -437,12 +437,12 @@ html body.offcanvas-menu:before {
 } 
 @media only screen and (max-width: 575px) {
 	.site-navbar-wrap .socio a {
-		display: none;
+		display: block;
 	}
 }
 @media only screen and (max-width: 480px) {
 	.site-navbar-wrap .socio a {
-		display: none;
+		display: block;
 	}
 }
 @media only screen and (max-width: 375px) {
@@ -451,7 +451,7 @@ html body.offcanvas-menu:before {
 		height: 40px;
 	}
 	.site-navbar-wrap .socio a {
-		display: none;
+		display: block;
 	}
 }
 @media only screen and (max-width: 320px) {
@@ -460,7 +460,7 @@ html body.offcanvas-menu:before {
 		height: 40px;
 	}
 	.site-navbar-wrap .socio a {
-		display: none;
+		display: block;
 	}
 }
 /*--------------------------------------------------------------
@@ -489,7 +489,7 @@ html body.offcanvas-menu:before {
 .carousel-inner .carousel-caption h1 {
 	font-size: 38px;
 	font-weight: 600;
-	color:#fff;
+	color:#cdcdcd;
 	width: 75%;
 	animation-delay: 1s;
 	text-transform: capitalize;
@@ -500,7 +500,7 @@ html body.offcanvas-menu:before {
 .carousel-caption h2 {
 	font-size: 38px;
 	font-weight: 600;
-	color:#fff;
+	color:#cdcdcd;
 	width: 75%;
 	animation-delay: 1s;
 	text-transform: capitalize;
@@ -511,7 +511,7 @@ html body.offcanvas-menu:before {
 .carousel-caption h3 {
 	margin-top: 20px;
 	font-size: 22px;
-	color: #cdcdcd;
+	color: #fff;
 	font-weight: 500;
 	width: 70%;
 	animation-delay: 1.5s;
@@ -830,6 +830,8 @@ nav .breadcrumb li a:hover{
 }
 @media only screen and (max-width: 767px) {
 	.colum{
+		width: 105%;
+		padding: 0;
 		display:block;
 		margin-left: auto;
 		margin-right:auto;
@@ -1381,6 +1383,9 @@ nav .breadcrumb li a:hover{
 /*--------------------------------------------------------------
 # HOMPAGE SERVICES / SERVICES
 --------------------------------------------------------------*/
+.service-style-one{
+	margin-top: 50px;
+}
 .service-page-three{
 	margin: 30px;
 }
@@ -1572,14 +1577,14 @@ nav .breadcrumb li a:hover{
 }
 .about-us img{
 	width: 500px;
-	height: 390px;
-	padding: 15px 25px;
+	height: 400px;
+	padding: 0px 5px;
 	float: right;
 	clear: both;
 }
 .about-us p{
 	font-size: 17px;
-	padding: 15px 30px;
+	padding: 0px 5px;
 	text-align: justify;
 	line-height: 35px;
 	width: 100%;
@@ -1594,17 +1599,19 @@ nav .breadcrumb li a:hover{
 	margin-top: 10px;
 }
 .about-us ul li{
-	font-size: 16px;
+	font-size: 15px;
 	line-height: 40px;
 	list-style-type: none;
+	text-align: justify;
 }
-.about-us ul li i{
-	font-size: 16px;
+.about-us ul i{
+	font-size: 12px;
 	color: #fff;
 	background: #001f3f;
 	padding: 10px;
 	margin-right: 15px;
 	border-radius: 100%;
+	float: left;
 }
 .about-us .bubbled-text-block {
 	position: absolute;
@@ -1674,18 +1681,15 @@ nav .breadcrumb li a:hover{
 	}
 	.about-us p{
 		width: 100%;
-		padding: 5px;
-		font-size: 15px;
-		line-height: 25px;
+		font-size: 16px;
 	}
 	.about-us img{
-		width: 55%;
+		width: 57%;
 		height: 100%;
-		padding: 10px;
 	}
 	.about-us .bubbled-text-block {
 		width: 155px;
-		height: 155px;
+		height: 150px;
 		margin-top: -65px;
 	}
 	.about-us .bubbled-text-block span {
@@ -1703,19 +1707,16 @@ nav .breadcrumb li a:hover{
 	}
 	.about-us p{
 		width: 100%;
-		padding: 5px;
 		font-size: 15px;
-		line-height: 25px;
 	}
 	.about-us img{
-		width: 55%;
+		width: 60%;
 		height: 100%;
-		padding: 10px;
 	}
 	.about-us .bubbled-text-block {
 		width: 140px;
 		height: 140px;
-		margin-top: -65px;
+		margin-top: -68px;
 	}
 	.about-us .bubbled-text-block span {
 		font-size: 22px;
@@ -1723,13 +1724,17 @@ nav .breadcrumb li a:hover{
 	.about-us .bubbled-text-block h3 {
 		font-size: 16px;
 	}
+	.about-us h5{
+		margin-left: 0px;
+	}
+	.about-us ul{
+		margin-left: -30px;
+	}
 }
 @media only screen and (max-width: 575px) {
 	.about-us p{
 		width: 100%;
-		padding: 5px;
 		font-size: 15px;
-		line-height: 25px;
 	}
 	.about-us img{
 		width: 100%;
@@ -1739,21 +1744,26 @@ nav .breadcrumb li a:hover{
 	.about-us .bubbled-text-block {
 		width: 130px;
 		height: 130px;
-		margin-top: 0px;
+		margin-top: -15px;
+		margin-right: 20px;
 	}
 	.about-us .bubbled-text-block span {
 		font-size: 20px;
 	}
 	.about-us .bubbled-text-block h3 {
 		font-size: 14px;
+	}
+	.about-us ul i{
+		margin-left: -40px;
+	}
+	.about-us h5{
+		margin-left: 0px;
 	}
 }
 @media only screen and (max-width: 480px) {
 	.about-us p{
 		width: 100%;
-		padding: 5px;
 		font-size: 15px;
-		line-height: 25px;
 	}
 	.about-us img{
 		width: 100%;
@@ -1763,7 +1773,7 @@ nav .breadcrumb li a:hover{
 	.about-us .bubbled-text-block {
 		width: 120px;
 		height: 120px;
-		margin-top: 0px;
+		margin-top: -20px;
 	}
 	.about-us .bubbled-text-block span {
 		font-size: 20px;
@@ -1771,24 +1781,37 @@ nav .breadcrumb li a:hover{
 	.about-us .bubbled-text-block h3 {
 		font-size: 14px;
 	}
+	.about-us ul i{
+		margin-left: -40px;
+	}
+	.about-us h5{
+		margin-left: 0px;
+	}
 }
 @media only screen and (max-width: 375px) {
 	.about-us p{
 		width: 100%;
-		padding: 5px;
-		font-size: 15px;
-		line-height: 25px;
+		font-size: 16px;
+	}
+	.about-us ul i{
+		margin-left: -40px;
+	}
+	.about-us h5{
+		margin-left: 0px;
+	}
+	.about-us h5{
+		font-size: 27px;
 	}
 	.about-us img{
 		width: 100%;
 		height: 100%;
 		margin-top: 20px;
-		padding-bottom: 60px;
+		padding-bottom: 20px;
 	}
 	.about-us .bubbled-text-block {
 		width: 120px;
 		height: 120px;
-		margin-top: -30px;
+		margin-top: -60px;
 	}
 	.about-us .bubbled-text-block span {
 		font-size: 20px;
@@ -1800,9 +1823,10 @@ nav .breadcrumb li a:hover{
 @media only screen and (max-width: 320px) {
 	.about-us p{
 		width: 100%;
-		padding: 5px;
 		font-size: 15px;
-		line-height: 25px;
+	}
+	.about-us h5{
+		font-size: 27px;
 	}
 	.about-us img{
 		width: 100%;
@@ -1813,7 +1837,7 @@ nav .breadcrumb li a:hover{
 	.about-us .bubbled-text-block {
 		width: 115px;
 		height: 115px;
-		margin-top: -20px;
+		margin-top: -50px;
 	}
 	.about-us .bubbled-text-block span {
 		font-size: 20px;
@@ -1825,163 +1849,64 @@ nav .breadcrumb li a:hover{
 /*--------------------------------------------------------------
 # MISSION
 --------------------------------------------------------------*/
-.card-cover{
-	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-	grid-gap: 15px;
-	margin-top: 0 auto;
-	padding: 10px 0px;
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center center;
+.mission{
+	margin-top: 50px;
 }
-.card-cover .card{
-	position: relative;
-	width: 300px;
-	height: 350px;
-	margin: 0 auto;
-	background: #fff;
-	box-shadow: 0 15px 20px rgba(0, 0, 0, 0.1);
-	border-bottom-left-radius: 15%;
-	border-top-right-radius: 15%;
+.vision{
+	padding: 15px 5px;
+	background: #fafafa;
+	border: 3px solid #082842;
+	margin: 20px;
+	height: 300px;
 }
-.card-cover .card .face{
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	border-bottom-left-radius: 15%;
-	border-top-right-radius: 15%;
+.vision h4{
+	font-size: 25px;
+	margin-top: 50px;
+	color: #006420;
+	text-align: center;
+	font-weight: bold;
+	font-family: 'Big Shoulders Text', cursive;
 }
-.card-cover .card .face.face1{
-	box-sizing: border-box;
-	padding: 20px;
-}
-.card-cover .card .face.face1 h2{
-	margin: 0;
-	padding: 0;
-}
-.card-cover .card .face.face1 p{
-	font-size: 15px;
-	text-align: justify;
-	padding: 10px 0px;
-}
-.card-cover .card .face.face1 li{
-	font-size: 15px;
+.vision p{
+	margin-top: 25px;
 	line-height: 30px;
+	padding: 0px 5px;
+	font-size: 16px;
+	text-align: center;
 }
-.card-cover .card .face.face2{
-	background: #111;
-	transition: 0.5s;
-}
-.card-cover .card:nth-child(1) .face.face2{
-	background-image: url("images/.jpg");
-	background-position: center center;
-	background-size: cover;
-	background-repeat: no-repeat;
-}
-.card-cover .card:nth-child(2) .face.face2{
-	background-image: url("images/.jpg");
-	background-position: center center;
-	background-size: cover;
-	background-repeat: no-repeat;
-}
-.card-cover .card:nth-child(3) .face.face2{
-	background-image: url("images/.jpg");
-	background-position: center center;
-	background-size: cover;
-	background-repeat: no-repeat;
-}
-.card-cover .card:hover .face.face2{
-	height: 60px;
-}
-.card-cover .card .face.face2:before{
-	content: '';
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background: rgba(255,255,255, 0.1);
-}
-.card-cover .card .face.face2 h2{
-	margin: 0;
-	padding: 0;
-	font-size: 30px;
-	color: #cdcdcd;
-	transition: 0.5s;
-	font-weight: 550;
-	text-transform: uppercase;
-	text-shadow: 10px 2px 5px rgba(0, 0, 0, 0.2);
-}
-.card-cover .card:hover .face.face2 h2{
-	font-size: 1em;
-}
-@media only screen and (max-width: 1199px) {
-	.card-cover .card{
-		width: 30%;
-		height: 50vh;
-		display: block;
-		margin-left: auto;
-		margin-right:auto;
-	}
-}
-@media only screen and (max-width: 991px) {
-	.card-cover .card{
-		width: 30%;
-		height: 50vh;
-		display: block;
-		margin-left: auto;
-		margin-right:auto;
-	}
+.vision li{
+	margin-top: 25px;
+	line-height: 5px;
+	font-size: 16px;
+	margin-left: 15px;
 }
 @media only screen and (max-width: 767px) {
-	.card-cover .card{
-		width: 47%;
-		height: 55vh;
-		display: block;
+	.vision{
+		width: 100%;
+		display: inline-block;
 		margin-left: auto;
-		margin-right:auto;
+		margin-right: auto;
 	}
 }
 @media only screen and (max-width: 575px) {
-	.card-cover .card{
+	.vision{
+		width: 65%;
 		display: block;
 		margin-left: auto;
 		margin-right: auto;
-		width: 50%;
-		height: 60vh;
 	}
 }
 @media only screen and (max-width: 480px) {
-	.card-cover .card{
+	.vision{
+		width: 80%;
 		display: block;
 		margin-left: auto;
 		margin-right: auto;
-		width: 60%;
-		height: 55vh;
 	}
 }
 @media only screen and (max-width: 375px) {
-	.card-cover .card{
-		display: block;
-		margin-left: auto;
-		margin-right: auto;
-		width: 70%;
-		height: 55vh;
-	}
-}
-@media only screen and (max-width: 375px) {
-	.card-cover .card{
-		display: block;
-		margin-left: auto;
-		margin-right: auto;
-		width: 70%;
-		height: 50vh;
+	.vision{
+		width: 90%;
 	}
 }
 /*--------------------------------------------------------------
@@ -2005,6 +1930,7 @@ nav .breadcrumb li a:hover{
 	font-size: 17px;
 	margin-top: 10px;
 	color:#444;
+	text-align: justify;
 }
 .benefits img{
 	width: 60px;
@@ -2047,9 +1973,12 @@ nav .breadcrumb li a:hover{
 	font-weight: 550;
 	padding-left: 5px;
 }
-.pricing-table a{
-	margin: 15px 0px; 
-	padding: 10px 30px;
+.pricing-button{
+	margin-top: 25px;
+	margin-left: 0px;
+}
+.pricing-button a{ 
+	padding: 15px 30px;
 	border: 2px solid #006420;
 	border-radius: 10px;
 	color: #001f3f; 
@@ -2057,7 +1986,7 @@ nav .breadcrumb li a:hover{
 	font-weight: 550;
 	text-align: justify;
 }
-.pricing-table a:hover{
+.pricing-button a:hover{
 	text-decoration: none;
 	background: #001f3f;
 	color: #fff;
@@ -2076,12 +2005,11 @@ nav .breadcrumb li a:hover{
 .pricing-table{
 	max-width: 1300px;
 	margin-top: 20px;
-	display: flex;
+	display: block;
 	margin-left: auto;
 	margin-right: auto;
 	justify-content: center;
 	text-align: center;
-	flex-wrap: wrap;
 }
 .table{
 	background: none;
@@ -2163,8 +2091,12 @@ nav .breadcrumb li a:hover{
 	}
 }
 @media only screen and (max-width: 767px) {
+	.pricing{
+		width: 120%;
+	}
 	.pricing-table .table{
-		width: 100%;	
+		width: 100%;
+		padding: 0;	
 		display: block;
 		margin-left: auto;
 		margin-right: auto;
@@ -2308,7 +2240,7 @@ nav .breadcrumb li a:hover{
 # FEATURED PROJECT
 --------------------------------------------------------------*/
 .hp-project{
-	margin-top: 0px;
+	margin-top: 30px;
 	background: #fafafa;
 	padding-bottom: 50px;
 }
@@ -2335,6 +2267,7 @@ nav .breadcrumb li a:hover{
 @media only screen and (max-width: 767px) {
 	.featured-project img{
 		width: 45%;
+		height: 250px;
 		display: inline-block;
 		margin-left: auto;
 		margin-right: auto;
@@ -2549,17 +2482,12 @@ nav .breadcrumb li a:hover{
 }
 .pro-details img{
 	width: 300px;
-	height: 50vh;
+	height: 250px;
 	padding-bottom: 25px;
 }
 @media only screen and (max-width: 1199px) {
-	.pro-details img{
-		width: 50%;
-		height: 40vh;
-		padding: 10px;
-	}
 	.folio img{
-		width: 100%;
+		width: 95%;
 		height: 80vh;
 	}
 	.tech-details p{
@@ -2568,9 +2496,8 @@ nav .breadcrumb li a:hover{
 }
 @media only screen and (max-width: 991px) {
 	.pro-details img{
-		width: 50%;
-		height: 50vh;
-		padding: 20px;
+		padding: 0px 5px;
+		height: 200px;
 	}
 	.folio img{
 		width: 100%;
@@ -2582,11 +2509,12 @@ nav .breadcrumb li a:hover{
 }
 @media only screen and (max-width: 767px) {
 	.pro-details img{
-		width: 95%;
-		height: 50vh;
+		padding: 0px 10px;
+		height: 200px;
 	}
 	.folio img{
-		width: 100%;
+		display: block;
+		width: 105%;
 		height: 50vh;
 	}
 	.tech-details p{
@@ -2616,22 +2544,25 @@ nav .breadcrumb li a:hover{
 		line-height: 35px;
 	}
 	.pro-details img{
-		width: 10%;
-		height: 60vh;
+		padding: 0px 50px;
+		height: 200px;
 	}
 	.folio img{
 		padding: 0;
-		width: 100%;
+		width: 85%;
 		height: 50vh;
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
 	}
 }
 @media only screen and (max-width: 480px) {
 	.pro-details img {
-		width: 60%;
-		height: 60vh;
+		padding: 0px 50px;
+		height: 200px;
 	}
 	.folio img {
-		width: 100%;
+		width: 90%;
 		height: 50vh;
 	}
 	.tech-details p {
@@ -2640,12 +2571,12 @@ nav .breadcrumb li a:hover{
 }
 @media only screen and (max-width: 375px) {
 	.pro-details img {
-		width: 55%;
-		height: 60vh;
+		padding: 0px 20px;
+		height: 200px;
 	}
 	.folio img {
 		width: 100%;
-		height: 50vh;
+		height: 45vh;
 	}
 	.tech-details p {
 		width: 100%;
@@ -2653,12 +2584,12 @@ nav .breadcrumb li a:hover{
 }
 @media only screen and (max-width: 320px) {
 	.pro-details img {
-		width: 55%;
-		height: 55vh;
+		height: 200px;
+		padding: 0px 20px;
 	}
 	.folio img {
 		width: 100%;
-		height: 50vh;
+		height: 45vh;
 	}
 	.tech-details p {
 		width: 100%;
@@ -2757,7 +2688,7 @@ nav .breadcrumb li a:hover{
 	}
 	.single-team{
 		width: 100%;
-		height: 50vh;
+		height: 320px;
 		display: block;
 		margin-left: auto;
 		margin-right: auto;
@@ -2769,8 +2700,8 @@ nav .breadcrumb li a:hover{
 		width: 100%;
 	}
 	.single-team{
-		width: 60%;
-		height: 60vh;
+		width: 65%;
+		height: 350px;
 		display: block;
 		margin-left: auto;
 		margin-right: auto;
@@ -2781,8 +2712,8 @@ nav .breadcrumb li a:hover{
 		width: 100%;
 	}
 	.single-team{
-		width: 70%;
-		height: 60vh;
+		width: 85%;
+		height: 350px;
 		display: block;
 		margin-left: auto;
 		margin-right: auto;
@@ -2793,8 +2724,8 @@ nav .breadcrumb li a:hover{
 		width: 100%;
 	}
 	.single-team{
-		width: 85%;
-		height: 60vh;
+		width: 95%;
+		height: 320px;
 		display: block;
 		margin-left: auto;
 		margin-right: auto;	
@@ -2808,8 +2739,8 @@ nav .breadcrumb li a:hover{
 		display: block;
 		margin-left: auto;
 		margin-right: auto;
-		width: 90%;
-		height: 60vh;
+		width: 100%;
+		height: 300px;
 	}
 }
 /*--------------------------------------------------------------
@@ -3331,7 +3262,6 @@ nav .breadcrumb li a:hover{
 		text-align: justify;
 	}
 }
-
 @media only screen and (max-width: 991px) {
 	.FAQS h3{
 		font-size: 30px;
@@ -3459,6 +3389,7 @@ nav .breadcrumb li a:hover{
 	margin-top: 30px;
 	padding: 10px 0;
 	width: 100%;
+	height: 550px;
 }
 .form-row .form-control{
 	height:55px;
@@ -3548,11 +3479,12 @@ nav .breadcrumb li a:hover{
 	}
 }
 @media only screen and (max-width: 767px) {
-	.address .map embed{
+	.content .map embed{
 		display: block;
 		margin-left: auto;
 		margin-right: auto;
-		width: 100%;
+		width: 70%;
+		height: 450px;
 	}
 	.contact{
 		display: block;
@@ -3565,16 +3497,11 @@ nav .breadcrumb li a:hover{
 		margin-left: auto;
 		margin-right: auto;
 	}
-	.content .map{
-		width: 75%;
-		display: block;
-		margin-left: auto;
-		margin-right: auto;
-	}
 }
 @media only screen and (max-width: 575px) {
-	.address .map embed{
-		width:80%;
+	.content .map embed{
+		width:100%;
+		height: 350px;
 		display: block;
 		margin-left: auto;
 		margin-right: auto;
@@ -3594,9 +3521,9 @@ nav .breadcrumb li a:hover{
 	.address i{
 		font-size: 20px;
 	}
-	.address .map embed{
-		width: 90%;
-		height: 300px;
+	.content .map embed{
+		width: 100%;
+		height: 320px;
 		display: block;
 		margin-left: auto;
 		margin-right: auto;
@@ -3614,13 +3541,6 @@ nav .breadcrumb li a:hover{
 	}
 	.content #contact-form{
 		width: 95%;
-		display: block;
-		margin-left: auto;
-		margin-right: auto;
-	}
-	.content .map {
-		width: 95%;
-		height: 300px;
 		display: block;
 		margin-left: auto;
 		margin-right: auto;
@@ -3649,7 +3569,7 @@ nav .breadcrumb li a:hover{
 	#contact-form textarea{
 		width: 100%;
 	}
-	.address .map embed{
+	.content .map embed{
 		height: 300px;
 		width: 100%;
 		display: block;
@@ -3783,17 +3703,21 @@ nav .breadcrumb li a:hover{
 .service-list img{
 	width: 50%;
 	height: 60%;
-	padding: 0px 25px;
+	padding: 0px 15px;
 	justify-content: center;
 	float: left;
 	clear: both;
 }
 .service-list p{
-	font-size: 16px;
+	font-size: 17px;
 	text-align: justify;
 	width: 100%;
 	line-height: 40px;
 	padding: 0px 20px;
+}
+.service-list p span{
+	font-size: 17px;
+	font-weight: bold;
 }
 .service-list h4{
 	margin-top: 50px;
@@ -3840,6 +3764,7 @@ nav .breadcrumb li a:hover{
 	.service-list p{
 		width: 95%;
 		padding: 10px 20px;
+		font-size: 16px;
 	}
 }
 @media only screen and (max-width: 991px) {
@@ -3851,7 +3776,9 @@ nav .breadcrumb li a:hover{
 		display: block;
 	}
 	.service-list p{
+		margin-top: 50px;
 		padding: 10px 30px;
+		font-size: 15px;
 	}
 	.service-list h4{
 		width: 100%;
@@ -3869,6 +3796,7 @@ nav .breadcrumb li a:hover{
 	.service-list p{
 		margin-top: 40px;
 		width: 100%;
+		font-size: 15px;
 	}
 	.service-list h4{
 		margin-left: 10px;
@@ -3888,6 +3816,8 @@ nav .breadcrumb li a:hover{
 	}
 	.service-list p{
 		padding: 10px 20px;
+		line-height: 30px;
+		font-size: 15px;
 	}
 	.service-list h4{
 		margin-left: 10px;
@@ -3907,6 +3837,8 @@ nav .breadcrumb li a:hover{
 	}
 	.service-list p{
 		padding: 10px 20px;
+		line-height: 30px;
+		font-size: 15.5px;
 	}
 	.service-list h4{
 		margin-left: 10px;
@@ -3926,6 +3858,8 @@ nav .breadcrumb li a:hover{
 	}
 	.service-list p{
 		padding: 10px 20px;
+		line-height: 33px;
+		font-size: 15.5px;
 	}
 	.service-list h4{
 		margin-left: 10px;
@@ -3934,14 +3868,17 @@ nav .breadcrumb li a:hover{
 }
 @media only screen and (max-width: 320px) {
 	.service-list img{
-		width: 100%;
+		width: 105%;
+		padding: 5px;
 		height: auto;
 		margin-left: auto;
 		margin-right: auto;
 		display: block;
 	}
 	.service-list p{
-		padding: 10px 20px;
+		padding: 5px 5px;
+		line-height: 33px;
+		font-size: 15.5px;
 	}
 	.service-list h4{
 		margin-left: 10px;
@@ -3982,7 +3919,8 @@ nav .breadcrumb li a:hover{
 }
 @media only screen and (max-width: 320px) {
 	.brand-carousel-one img{
-		width: 60%;
+		width: 10%;
+		height: 20%;
 	}
 }
 }
@@ -4046,6 +3984,7 @@ nav .breadcrumb li a:hover{
   font-weight: 400;
   margin: 0;
   color: #cdcdcd;
+  text-align: justify;
 }
 .single-testimonial-style-three h6 {
   font-size: 20px;
@@ -4380,6 +4319,7 @@ nav .breadcrumb li a:hover{
 	color: #7f8284;
 	font-weight: 500;
 	margin: 36px 0 0;
+	text-align: justify;
 }
 @media only screen and (max-width: 767px) {
 	.single-testimonial-style-one .text-block{
