--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -71,18 +71,10 @@
                 </div>
                 <div class="socio col-4 text-right">
                     <div class="mr-auto">
-                        <a href="https://www.twitter.com/greenn_energy" class="p-2 pl-0">
-                            <span class="icon-twitter"></span>
-                        </a>
-                        <a href="https://www.facebook.com/greensourcenergy/" class="p-2 pl-0">
-                            <span class="icon-facebook"></span>
-                        </a>
-                        <a href="https://www.linkedin.com/company/greensource-energy" class="p-2 pl-0">
-                            <span class="icon-linkedin"></span>
-                        </a>
-                        <a href="https://www.instagram.com/greensourcenergy" class="p-2 pl-0">
-                            <span class="icon-instagram"></span>
-                        </a>
+                        <a href="#" class="mr-auto">
+                                <span class="icon-clock-o mr-2"></span>
+                                <span class="d-none d-md-inline-block">Mon - Fri | 9am - 5pm</span>
+                            </a>
                     </div>
 
                 </div>
@@ -180,16 +172,16 @@
                             <a href="{% url 'solar_design' %}">Installation</a>
                         </li>
                         <li>
+                                <a href="{% url 'electrical_design' %}">Street lighting</a>
+                            </li>
+                        <li>
                             <a href="{% url 'maintenance_service' %}">Maintenance</a>
                         </li>
                         <li>
-                            <a href="{% url 'solar_water_pump' %}">Solar pump</a>
+                            <a href="{% url 'energy_management' %}">Energy storage </a>
                         </li>
                         <li>
-                            <a href="{% url 'energy_management' %}">Solar storage </a>
-                        </li>
-                        <li>
-                            <a href="{% url 'electrical_design' %}">Electricals</a>
+                            <a href="{% url 'hvac' %}">Electrical</a>
                         </li>
                     </ul>
                 </div>
