--- a/greensource_pages/templates/greensource_pages/electrical-design.html
+++ b/greensource_pages/templates/greensource_pages/electrical-design.html
@@ -1,12 +1,12 @@
 {% extends 'base_layout.html' %}
 {% block nav-service %} active {% endblock %}
 {% load static %}
-{% block title %}Solar Lights|Street Lights Solutions {{ block.super }}{% endblock %}
+{% block title %}Solar Street Lights Solutions {{ block.super }}{% endblock %}
 {% block content %}
 <div class="container-fluid padding">
     <div class="header row padding">
         <div class="col-12 animated fadeIn">
-            <p>Solar Lighting</p>
+            <p>Solar Street Lighting</p>
         </div>
     </div>
 </div>
@@ -17,30 +17,27 @@
         <li class="breadcrumb-item active">Solar Lighting</li>
     </ol>
 </nav>
-<div class="container-fluid padding">
+<div class="container padding">
     <div class="service-list row padding">
         <div class="col">
             <img src="{% static 'images/solar-light.webp' %}" alt="solar street light" />
             <p>
-                We design and install solar lights for houses, offices, neighborhoods, and markets to better serve our customers while also
-                growing our renewable energy output and decreasing our carbon footprint. Our design and specifications are
-                based on the needs of our customers, as well as a personalized lighting system to suit their unique objectives.
-                Our solar lights are made of high-quality PVC/PVC Composite materials that have superior longevity over the
-                course of their useful lives. Our solar lights are made entirely of LED BULBS, which provide brighter illumination
-                at night. They are also energy efficient, robust, and designed to provide optimum illumination at night.
-                We will enhance the aesthetics and efficiency of your environment. Our mission is to light up your room in
-                the most efficient and high-quality way possible with our LED installations, which use low-voltage power
-                to create beautiful, pollution-free lighting. All of our project installations come with a one-year warranty
-                and an amazing price. Our team is available whenever you need us and during our working hours. The most significant
-                aspect is the consistency of our work and the happiness of our customers.
+                     Solar Street and outdoor lighting is a dependable approach to offer illumination and security that is unconnected to the
+                    conventional electric grid where power outages often occurs. Solar Street lighting can reduce the hazards to public safety
+                    at night hours caused by cars and pedestrian traffic and curb vice appeal within an environment. It encourages a safe, more
+                    livable neighborhoods, brings your neighborhood together by creating well-lit areas that gives people confidence to stroll
+                    home at night, embark on early morning jog and visit play grounds. At Greensource Energy, our aim is to provide Solar lights
+                    where non-existed in communities, commercial centers, parks, Walk way, Street and Roadway. It's a long lasting sustainable
+                    solution and requires few maintenance visits, which is essential in difficult areas to reach.
             </p>
             <h4>Our Solar lighting service includes:</h4>
             <ul>
-                <li>Street light</li>
-                <li>Traffic light</li>
-                <li>Security light</li>
+                <li>Site Visits</li>
+                <li>Security lights</li>
+                <li>Solar Flood lights</li>
+                <li>Solar Street lights</li>
                 <li>Component Replacement</li>
-                <li>Lighting systems upgrade</li>
+                
             </ul>
         </div>
     </div>
