--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -265,8 +265,8 @@
         <small>&copy; Copyright &copy; 2021 All Rights Reserved | Greensource Energy</small>
     </p>
 </footer>
-    <script async src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script>window.jQuery || document.write('<script src="/static/js/jquery-3.3.1.min.js"><\/script>')</script></script>
+    <script async src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>window.jQuery || document.write('<script src="/static/js/jquery-3.6.0.min.js"><\/script>')</script></script>
     <script async src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script>window.jQuery || document.write('<script src="/static/js/popper.min.js"><\/script>')</script></script>
     <script async src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
@@ -319,6 +319,32 @@
         gtag('js', new Date());
 
         gtag('config', 'UA-179025578-1');
+    </script>
+    <script type=”application/ld+json”>
+        {
+        “@context” : “http://schema.org”,
+        “@type”: “Business”,
+        “name” : “Greensource”,
+        “legalName”: “Greensource Energy Consult”,
+        ],
+        “logo” : “https://greensourcenergy.com/static/images/greensource2.png”,
+        “url”: “https://greensourcenergy.com”,
+        “address”: {
+        “@type”: “PostalAddress”,
+        “streetAddress”: “Heritage by Anobi Noah”,
+        “addressLocality”: “Obafemi Owode ”,
+        “addressRegion”: “Mowe Ofada, Ogun”,
+        “postalCode”: “110115”
+        },
+        “telephone”: “09132909546”,
+        “openingHours”:
+        [
+        “Mon-Fri 09:00am-5:00pm”
+        ],
+        “email” :”support@greensourcenergy.com”,
+        “description”: “Need a cost effective and reliable Solar Home System for your Home or Business? We will design / install a custom system that fits your energy requirement!”
+        }
+        }
     </script>
     <script async src="https://cdn.ampproject.org/v0.js"></script>
     <script src="https://apps.elfsight.com/p/platform.js" defer></script>
